// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React homepage view questionnaire page matches Snapshot in non-production environments 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="ons-skip-link"
        href="#main-content"
      >
        Skip to content
      </a>
      <div
        style="background: rgb(34, 34, 34); color: rgb(34, 34, 34);"
      >
        <div
          class="ons-container"
        >
          <div
            class="ons-panel ons-panel--warn-branded ons-panel--no-title"
            style="background: rgb(34, 34, 34);"
          >
            <span
              aria-hidden="true"
              class="ons-panel__icon"
              style="color: rgb(34, 34, 34);"
            >
              !
            </span>
            <span
              class="ons-panel__assistive-text ons-u-vh"
            >
              Warning: 
            </span>
            <div
              class="ons-panel__body"
            >
              <p
                class="ons-u-mb-no"
              >
                This environment is not a production environment. Do not upload any live data to this service.
              </p>
            </div>
          </div>
        </div>
      </div>
      <header
        class="ons-header ons-header--internal"
      >
        <div
          class="ons-header__top"
          role="banner"
        >
          <div
            class="ons-container"
          >
            <div
              class="ons-header__grid-top ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap "
            >
              <div
                class="ons-grid__col ons-col-auto"
              >
                <a
                  class="header__logo-link"
                  href="/"
                >
                  <picture>
                    <img
                      alt="Office for National Statistics logo"
                      class="ons-header__logo"
                      src="https://cdn.ons.gov.uk/sdc/design-system/31.4.0/img/ons-logo-neg-en.svg"
                    />
                  </picture>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ons-header__main"
        >
          <div
            class="ons-container"
          >
            <div
              class="ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap"
            >
              <div
                class="ons-grid__col ons-col-auto ons-u-flex-shrink"
              >
                <div
                  class="ons-header__title"
                >
                  Deploy Questionnaire Service
                </div>
              </div>
              <div
                class="ons-grid__col ons-col-auto ons-u-flex-no-shrink ons-u-d-no@xxs@m"
              >
                <button
                  class="ons-btn ons-btn--ghost ons-u-d-no@xxs@m ons-btn--exit"
                  data-test-id="signout-button"
                  id="signout-button"
                  type="button"
                >
                  <span
                    class="ons-btn__inner"
                  >
                    <span
                      class="ons-btn__text"
                    >
                      Sign out
                    </span>
                    <svg
                      class="ons-svg-icon ons-u-ml-xs"
                      focusable="false"
                      viewBox="0 0 12 12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.85,7.65l-2.5-2.5a.5.5,0,0,0-.71,0,.48.48,0,0,0-.15.36V7h-3a.5.5,0,0,0-.5.5v1a.5.5,0,0,0,.5.5h3v1.5A.49.49,0,0,0,11,11a.48.48,0,0,0,.34-.14l2.51-2.5a.49.49,0,0,0,0-.68Z"
                        transform="translate(-2 -2)"
                      />
                      <path
                        d="M8.5,14h-6a.5.5,0,0,1-.5-.5V2.5A.5.5,0,0,1,2.5,2h6a.5.5,0,0,1,.5.5V3a.5.5,0,0,1-.5.5h-5v9h5A.5.5,0,0,1,9,13v.5A.5.5,0,0,1,8.5,14Z"
                        transform="translate(-2 -2)"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ons-navigation-wrapper"
        >
          <div
            class="ons-container ons-container--gutterless@xxs@l"
          >
            <nav
              aria-label="Main menu"
              class="ons-navigation ons-navigation--main ons-js-navigation"
              data-analytics="header-navigation"
              id="main-nav"
              role="navigation"
            >
              <ul
                class="ons-navigation__list"
              >
                <li
                  class="ons-navigation__item  ons-navigation__item--active"
                >
                  <a
                    class="ons-navigation__link"
                    href="/"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="ons-navigation__item  "
                >
                  <a
                    class="ons-navigation__link"
                    href="/upload"
                  >
                    Deploy a questionnaire
                  </a>
                </li>
                <li
                  class="ons-navigation__item  "
                >
                  <a
                    class="ons-navigation__link"
                    href="/audit"
                  >
                    View deployment history
                  </a>
                </li>
                <li
                  class="ons-navigation__item  "
                >
                  <a
                    class="ons-navigation__link"
                    href="/status"
                  >
                    Check Blaise status
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </header>
      <div
        class="ons-page__container ons-container"
        style="min-height: calc(67vh);"
      >
        <main
          class="ons-page__main ons-u-mt-no"
          id="main-content"
        >
          <div
            class="elementToFadeIn ons-u-pt-s"
          >
            <div
              class="ons-field"
            >
              <label
                class="ons-label"
                for="filter-by-name"
              >
                Filter by questionnaire name
              </label>
              <input
                class="ons-input ons-input--text ons-input-type__input"
                id="filter-by-name"
                type="text"
              />
            </div>
            <div
              class="ons-u-mt-s"
            >
              <h3
                aria-live="polite"
              >
                3
                 results of 
                3
              </h3>
              <table
                class="ons-table"
                id="questionnaire-table"
              >
                <thead
                  class="ons-table__head"
                >
                  <tr
                    class="ons-table__row"
                  >
                    <th
                      class="ons-table__header"
                      scope="col"
                    >
                      Questionnaire
                    </th>
                    <th
                      class="ons-table__header"
                      scope="col"
                    >
                      Field period
                    </th>
                    <th
                      class="ons-table__header"
                      scope="col"
                    >
                      Status
                    </th>
                    <th
                      class="ons-table__header"
                      scope="col"
                    >
                      Install date
                    </th>
                    <th
                      class="ons-table__header"
                      scope="col"
                    >
                      Cases
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ons-table__body"
                >
                  <tr
                    class="ons-table__row"
                    data-testid="questionnaire-table-row"
                  >
                    <td
                      class="ons-table__cell "
                    >
                      <a
                        aria-label="View more information for questionnaire OPN2101A"
                        data-testid="info-OPN2101A"
                        href="/questionnaire/OPN2101A"
                        id="info-OPN2101A"
                      >
                        OPN2101A
                      </a>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      January 2021
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      <span
                        class="ons-status ons-status--success"
                      >
                        Active
                      </span>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      15/01/2021 14:41
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      0
                    </td>
                  </tr>
                  <tr
                    class="ons-table__row"
                    data-testid="questionnaire-table-row"
                  >
                    <td
                      class="ons-table__cell "
                    >
                      <a
                        aria-label="View more information for questionnaire OPN2007T"
                        data-testid="info-OPN2007T"
                        href="/questionnaire/OPN2007T"
                        id="info-OPN2007T"
                      >
                        OPN2007T
                      </a>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      July 2020
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      <span
                        class="ons-status ons-status--success"
                      >
                        Active
                      </span>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      15/01/2021 15:18
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      10
                    </td>
                  </tr>
                  <tr
                    class="ons-table__row"
                    data-testid="questionnaire-table-row"
                  >
                    <td
                      class="ons-table__cell "
                    >
                      <a
                        aria-label="View more information for questionnaire OPN2004A"
                        data-testid="info-OPN2004A"
                        href="/questionnaire/OPN2004A"
                        id="info-OPN2004A"
                      >
                        OPN2004A
                      </a>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      April 2020
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      <span
                        class="ons-status ons-status--error"
                      >
                        Failed
                      </span>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      15/01/2021 15:26
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      0
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </main>
      </div>
      <footer
        class="ons-footer"
      >
        <div
          class="ons-footer__body"
          data-analytics="footer"
        >
          <div
            class="ons-container"
          >
            <div
              class="ons-grid"
            />
            <div
              class="ons-grid ons-grid--flex ons-grid--vertical-top ons-grid--between"
            >
              <div
                class="ons-grid__col"
              >
                <div
                  class="ons-footer__poweredby ons-u-mb-m"
                >
                  <svg
                    aria-labelledby="ons-logo-en-footer-alt"
                    class="ons-svg-logo"
                    height="19"
                    viewBox="33 2 552 60"
                    width="197"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="ons-logo-en-footer-alt"
                    >
                      Office for National Statistics
                    </title>
                    <g
                      class="ons-svg-logo__group ons-svg-logo__group--secondary"
                      fill="#a8bd3a"
                    >
                      <path
                        d="M0,34.6c.8-1.69,1.39-3,2.32-4.6A38.28,38.28,0,0,1,0,23.4V34.6M5,3S0,3,0,9.25v1A62.12,62.12,0,0,0,4.2,27a43.77,43.77,0,0,1,9.42-10.79C21.69,9.21,31.16,5.13,45.9,3Z"
                      />
                    </g>
                    <g
                      class="ons-svg-logo__group ons-svg-logo__group--primary"
                      fill="#003c57"
                    >
                      <path
                        d="M53.06,6.42C36.2,8,24.68,12.92,16.43,20.07A41.46,41.46,0,0,0,6.4,32.2C12.87,44.93,28.88,57,46.6,57H47s6.32.21,6.32-6.91V6.36a1.22,1.22,0,0,1-.26.06M9.72,42.67a44.25,44.25,0,0,1-5-7.42A80.59,80.59,0,0,0,0,46.38V56.91L31.06,57c-9.83-3-15.74-7.64-21.34-14.3"
                      />
                    </g>
                    <g
                      class="ons-svg-logo__group ons-svg-logo__group--text"
                      fill="#003c57"
                    >
                      <path
                        d="M82,47.49c-9.07,0-13.13-7.51-13.13-16.77S72.91,14,82,14s13.1,7.61,13.1,16.77S91.1,47.54,82,47.54m0-30.91c-6.69,0-9.07,7.33-9.07,14.05s2.16,13.9,9.07,13.9,9-7.28,9-13.9-2.34-14-9-14"
                      />
                      <path
                        d="M106.36,23.81V46.88h-3.67V23.81H98.93V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.38,0,.86.05.86.05v2.35h-.43c-2.55,0-4.84,1.64-4.84,5.12v4.09h5.27v2.25Z"
                      />
                      <path
                        d="M121.53,23.81V46.88h-3.67V23.81H114.1V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.38,0,.86.05.86.05v2.35h-.43c-2.55,0-4.84,1.64-4.84,5.12v4.09h5.27v2.25Z"
                      />
                      <path
                        d="M132.85,16.72a2.28,2.28,0,0,1-2.33-2.23v0a2.34,2.34,0,0,1,4.67,0,2.28,2.28,0,0,1-2.3,2.26h0M131,21.56h3.71V46.88H131Z"
                      />
                      <path
                        d="M150.53,47.49c-6,0-10.63-5.16-10.63-13.29S144.52,21,150.66,21a9.76,9.76,0,0,1,6.17,1.74l-1,2.25a7.53,7.53,0,0,0-4.4-1.36c-5.15,0-7.78,4.46-7.78,10.48,0,6.2,3,10.62,7.65,10.62a8,8,0,0,0,4.49-1.37l1,2.45a10.21,10.21,0,0,1-6.3,1.73"
                      />
                      <path
                        d="M162.84,35.75c.48,6,3.76,9,8.9,9a14.66,14.66,0,0,0,6.88-1.55l1.08,2.59a18,18,0,0,1-8.22,1.73c-7.12,0-12.18-4.23-12.18-13.34,0-8.69,4.67-13.2,11-13.2s10.37,3.95,10.37,12.4Zm7.35-12.41c-4.1,0-7.56,3.2-7.52,10.29l14.39-2c0-5.87-2.81-8.32-6.87-8.32"
                      />
                      <path
                        d="M198.57,23.81V46.88H194.9V23.81h-3.76V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.39,0,.87.05.87.05v2.35h-.44c-2.54,0-4.84,1.64-4.84,5.12v4.09h5.28v2.25Z"
                      />
                      <path
                        d="M217.28,47.49c-7.47,0-10.89-5.78-10.89-13.24S209.81,21,217.28,21s10.85,5.82,10.85,13.3-3.37,13.24-10.85,13.24m0-24c-5.53,0-7.13,5.59-7.13,10.81s1.73,10.56,7.13,10.56,7.13-5.35,7.13-10.56-1.6-10.81-7.13-10.81"
                      />
                      <path
                        d="M244.08,23.91c-2.34-.61-5.75-.52-7.35.47v22.5H233V22.69c2.67-1.13,5.36-1.74,10.11-1.74H245Z"
                      />
                      <path
                        d="M277.42,47.13,263.07,25a32.2,32.2,0,0,1-1.85-3.29h-.09s.13,1.88.13,3.85V47.13h-4.71V14.8h5.31l13.61,20.82A28.76,28.76,0,0,1,277.38,39h.08s-.17-1.84-.17-3.77V14.8H282V47.13Z"
                      />
                      <path
                        d="M297.52,47.79c-7.43,0-10.93-3-10.93-7.81,0-6.8,7.12-8.64,15.59-9.39V29.13c0-3.47-2.37-4.51-5.83-4.51a18,18,0,0,0-6.87,1.46L288.23,23a24,24,0,0,1,9.12-1.83c5.61,0,9.93,2.3,9.93,8.78V46a22.71,22.71,0,0,1-9.76,1.83m4.66-14.67c-6.26.67-10.45,1.84-10.45,6.73,0,3.42,2.42,4.88,6.22,4.88a10.09,10.09,0,0,0,4.23-.84Z"
                      />
                      <path
                        d="M322,47.69c-5.31,0-7.34-3.43-7.34-6.86V25.09h-3.55V21.81h3.55V16.12l5.4-1.5v7.19H325v3.28h-5V40.55a3.26,3.26,0,0,0,3,3.52h.5a5.5,5.5,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                      />
                      <path
                        d="M331.91,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.44V47.13h-5.44Z"
                      />
                      <path
                        d="M350.88,47.79c-7.73,0-11.57-5.74-11.57-13.3s3.84-13.34,11.57-13.34,11.54,5.78,11.54,13.34-3.8,13.3-11.54,13.3m0-23.17c-4.66,0-6.05,4.89-6.05,9.82s1.47,9.63,6.05,9.63,6.05-4.7,6.05-9.63-1.38-9.82-6.05-9.82"
                      />
                      <path
                        d="M382.52,47.13V29c0-3.24-2.77-4.47-5.88-4.47a12.3,12.3,0,0,0-4.37.76v21.8h-5.39V23a26.81,26.81,0,0,1,10.06-1.83c6.61,0,11,2.25,11,7.8V47.13Z"
                      />
                      <path
                        d="M403.18,47.79c-7.43,0-10.94-3-10.94-7.81,0-6.8,7.13-8.64,15.6-9.39V29.13c0-3.47-2.37-4.51-5.83-4.51a18,18,0,0,0-6.87,1.46L393.89,23A24,24,0,0,1,403,21.15c5.62,0,9.94,2.3,9.94,8.78V46a22.71,22.71,0,0,1-9.76,1.83m4.66-14.67c-6.27.67-10.46,1.84-10.46,6.73,0,3.42,2.43,4.88,6.23,4.88a10.09,10.09,0,0,0,4.23-.84Z"
                      />
                      <polygon
                        points="418.52 47.13 418.52 34.91 418.52 10.25 423.92 10.25 423.92 22.76 423.92 47.13 418.52 47.13"
                      />
                      <path
                        d="M445.39,47.79A19.11,19.11,0,0,1,436.58,46l1.51-4a13.48,13.48,0,0,0,6.22,1.55c3.76,0,6.44-2.21,6.44-5.41,0-7.09-13.44-4.36-13.44-14.42,0-5.13,4.15-9.59,10.72-9.59A15.82,15.82,0,0,1,455.8,16l-1.38,3.52a11.93,11.93,0,0,0-5.66-1.5c-3.5,0-5.79,2.11-5.79,5.12,0,7,13.74,3.94,13.74,14.65,0,5.74-4.71,10-11.32,10"
                      />
                      <path
                        d="M470.41,47.69c-5.31,0-7.34-3.43-7.34-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.92v3.28h-4.92V40.55a3.27,3.27,0,0,0,3,3.52h.48a5.12,5.12,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                      />
                      <path
                        d="M487.27,47.79c-7.44,0-10.93-3-10.93-7.81,0-6.8,7.13-8.64,15.6-9.39V29.13c0-3.47-2.38-4.51-5.84-4.51a18,18,0,0,0-6.87,1.46L478,23a23.94,23.94,0,0,1,9.11-1.83c5.62,0,9.94,2.3,9.94,8.78V46a22.71,22.71,0,0,1-9.76,1.83M492,33.16c-6.27.67-10.46,1.84-10.46,6.73,0,3.42,2.42,4.88,6.22,4.88a10,10,0,0,0,4.24-.84Z"
                      />
                      <path
                        d="M511.73,47.69c-5.32,0-7.35-3.43-7.35-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.92v3.28h-4.92V40.55a3.26,3.26,0,0,0,3,3.52h.5a5.5,5.5,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                      />
                      <path
                        d="M521.66,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.45V47.13h-5.45Z"
                      />
                      <path
                        d="M536.19,47.79A15.9,15.9,0,0,1,528.54,46L530,42.48a10.53,10.53,0,0,0,5.52,1.5c2.77,0,5-1.78,5-3.94,0-6-11.1-3.2-11.1-11.47,0-3.76,3.37-7.42,8.86-7.42A13.56,13.56,0,0,1,545.34,23l-1.42,3.14a8.47,8.47,0,0,0-4.62-1.45c-2.81,0-4.54,1.69-4.54,3.62,0,5.64,11.32,3.14,11.32,11.6,0,4-3.85,7.9-9.89,7.9"
                      />
                      <path
                        d="M559.83,47.69c-5.31,0-7.35-3.43-7.35-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.93v3.28h-4.93V40.55a3.27,3.27,0,0,0,3,3.52h.48a5.64,5.64,0,0,0,1.47-.23v3.33a7.72,7.72,0,0,1-3,.52"
                      />
                      <path
                        d="M569.77,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.44V47.13h-5.44Z"
                      />
                      <path
                        d="M588.14,47.79c-6.23,0-11-5.08-11-13.35s4.88-13.29,11-13.29A10.51,10.51,0,0,1,594.66,23l-1.21,3a6.87,6.87,0,0,0-4-1.22c-4.4,0-6.69,3.81-6.69,9.49s2.63,9.59,6.61,9.59a6.74,6.74,0,0,0,4-1.28L594.7,46c-1.12.94-3.33,1.84-6.56,1.84"
                      />
                      <path
                        d="M605.1,47.79A15.9,15.9,0,0,1,597.45,46l1.42-3.47A10.54,10.54,0,0,0,604.4,44c2.77,0,5-1.78,5-3.94,0-6-11.1-3.2-11.1-11.47,0-3.76,3.37-7.42,8.85-7.42a13.49,13.49,0,0,1,7.1,1.83l-1.42,3.14a8.42,8.42,0,0,0-4.63-1.45c-2.8,0-4.53,1.69-4.53,3.62,0,5.64,11.32,3.14,11.32,11.6,0,4-3.85,7.9-9.89,7.9"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <a
      class="ons-skip-link"
      href="#main-content"
    >
      Skip to content
    </a>
    <div
      style="background: rgb(34, 34, 34); color: rgb(34, 34, 34);"
    >
      <div
        class="ons-container"
      >
        <div
          class="ons-panel ons-panel--warn-branded ons-panel--no-title"
          style="background: rgb(34, 34, 34);"
        >
          <span
            aria-hidden="true"
            class="ons-panel__icon"
            style="color: rgb(34, 34, 34);"
          >
            !
          </span>
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Warning: 
          </span>
          <div
            class="ons-panel__body"
          >
            <p
              class="ons-u-mb-no"
            >
              This environment is not a production environment. Do not upload any live data to this service.
            </p>
          </div>
        </div>
      </div>
    </div>
    <header
      class="ons-header ons-header--internal"
    >
      <div
        class="ons-header__top"
        role="banner"
      >
        <div
          class="ons-container"
        >
          <div
            class="ons-header__grid-top ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap "
          >
            <div
              class="ons-grid__col ons-col-auto"
            >
              <a
                class="header__logo-link"
                href="/"
              >
                <picture>
                  <img
                    alt="Office for National Statistics logo"
                    class="ons-header__logo"
                    src="https://cdn.ons.gov.uk/sdc/design-system/31.4.0/img/ons-logo-neg-en.svg"
                  />
                </picture>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ons-header__main"
      >
        <div
          class="ons-container"
        >
          <div
            class="ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap"
          >
            <div
              class="ons-grid__col ons-col-auto ons-u-flex-shrink"
            >
              <div
                class="ons-header__title"
              >
                Deploy Questionnaire Service
              </div>
            </div>
            <div
              class="ons-grid__col ons-col-auto ons-u-flex-no-shrink ons-u-d-no@xxs@m"
            >
              <button
                class="ons-btn ons-btn--ghost ons-u-d-no@xxs@m ons-btn--exit"
                data-test-id="signout-button"
                id="signout-button"
                type="button"
              >
                <span
                  class="ons-btn__inner"
                >
                  <span
                    class="ons-btn__text"
                  >
                    Sign out
                  </span>
                  <svg
                    class="ons-svg-icon ons-u-ml-xs"
                    focusable="false"
                    viewBox="0 0 12 12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.85,7.65l-2.5-2.5a.5.5,0,0,0-.71,0,.48.48,0,0,0-.15.36V7h-3a.5.5,0,0,0-.5.5v1a.5.5,0,0,0,.5.5h3v1.5A.49.49,0,0,0,11,11a.48.48,0,0,0,.34-.14l2.51-2.5a.49.49,0,0,0,0-.68Z"
                      transform="translate(-2 -2)"
                    />
                    <path
                      d="M8.5,14h-6a.5.5,0,0,1-.5-.5V2.5A.5.5,0,0,1,2.5,2h6a.5.5,0,0,1,.5.5V3a.5.5,0,0,1-.5.5h-5v9h5A.5.5,0,0,1,9,13v.5A.5.5,0,0,1,8.5,14Z"
                      transform="translate(-2 -2)"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ons-navigation-wrapper"
      >
        <div
          class="ons-container ons-container--gutterless@xxs@l"
        >
          <nav
            aria-label="Main menu"
            class="ons-navigation ons-navigation--main ons-js-navigation"
            data-analytics="header-navigation"
            id="main-nav"
            role="navigation"
          >
            <ul
              class="ons-navigation__list"
            >
              <li
                class="ons-navigation__item  ons-navigation__item--active"
              >
                <a
                  class="ons-navigation__link"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                class="ons-navigation__item  "
              >
                <a
                  class="ons-navigation__link"
                  href="/upload"
                >
                  Deploy a questionnaire
                </a>
              </li>
              <li
                class="ons-navigation__item  "
              >
                <a
                  class="ons-navigation__link"
                  href="/audit"
                >
                  View deployment history
                </a>
              </li>
              <li
                class="ons-navigation__item  "
              >
                <a
                  class="ons-navigation__link"
                  href="/status"
                >
                  Check Blaise status
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <div
      class="ons-page__container ons-container"
      style="min-height: calc(67vh);"
    >
      <main
        class="ons-page__main ons-u-mt-no"
        id="main-content"
      >
        <div
          class="elementToFadeIn ons-u-pt-s"
        >
          <div
            class="ons-field"
          >
            <label
              class="ons-label"
              for="filter-by-name"
            >
              Filter by questionnaire name
            </label>
            <input
              class="ons-input ons-input--text ons-input-type__input"
              id="filter-by-name"
              type="text"
            />
          </div>
          <div
            class="ons-u-mt-s"
          >
            <h3
              aria-live="polite"
            >
              3
               results of 
              3
            </h3>
            <table
              class="ons-table"
              id="questionnaire-table"
            >
              <thead
                class="ons-table__head"
              >
                <tr
                  class="ons-table__row"
                >
                  <th
                    class="ons-table__header"
                    scope="col"
                  >
                    Questionnaire
                  </th>
                  <th
                    class="ons-table__header"
                    scope="col"
                  >
                    Field period
                  </th>
                  <th
                    class="ons-table__header"
                    scope="col"
                  >
                    Status
                  </th>
                  <th
                    class="ons-table__header"
                    scope="col"
                  >
                    Install date
                  </th>
                  <th
                    class="ons-table__header"
                    scope="col"
                  >
                    Cases
                  </th>
                </tr>
              </thead>
              <tbody
                class="ons-table__body"
              >
                <tr
                  class="ons-table__row"
                  data-testid="questionnaire-table-row"
                >
                  <td
                    class="ons-table__cell "
                  >
                    <a
                      aria-label="View more information for questionnaire OPN2101A"
                      data-testid="info-OPN2101A"
                      href="/questionnaire/OPN2101A"
                      id="info-OPN2101A"
                    >
                      OPN2101A
                    </a>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    January 2021
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    <span
                      class="ons-status ons-status--success"
                    >
                      Active
                    </span>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    15/01/2021 14:41
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    0
                  </td>
                </tr>
                <tr
                  class="ons-table__row"
                  data-testid="questionnaire-table-row"
                >
                  <td
                    class="ons-table__cell "
                  >
                    <a
                      aria-label="View more information for questionnaire OPN2007T"
                      data-testid="info-OPN2007T"
                      href="/questionnaire/OPN2007T"
                      id="info-OPN2007T"
                    >
                      OPN2007T
                    </a>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    July 2020
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    <span
                      class="ons-status ons-status--success"
                    >
                      Active
                    </span>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    15/01/2021 15:18
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    10
                  </td>
                </tr>
                <tr
                  class="ons-table__row"
                  data-testid="questionnaire-table-row"
                >
                  <td
                    class="ons-table__cell "
                  >
                    <a
                      aria-label="View more information for questionnaire OPN2004A"
                      data-testid="info-OPN2004A"
                      href="/questionnaire/OPN2004A"
                      id="info-OPN2004A"
                    >
                      OPN2004A
                    </a>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    April 2020
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    <span
                      class="ons-status ons-status--error"
                    >
                      Failed
                    </span>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    15/01/2021 15:26
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </main>
    </div>
    <footer
      class="ons-footer"
    >
      <div
        class="ons-footer__body"
        data-analytics="footer"
      >
        <div
          class="ons-container"
        >
          <div
            class="ons-grid"
          />
          <div
            class="ons-grid ons-grid--flex ons-grid--vertical-top ons-grid--between"
          >
            <div
              class="ons-grid__col"
            >
              <div
                class="ons-footer__poweredby ons-u-mb-m"
              >
                <svg
                  aria-labelledby="ons-logo-en-footer-alt"
                  class="ons-svg-logo"
                  height="19"
                  viewBox="33 2 552 60"
                  width="197"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="ons-logo-en-footer-alt"
                  >
                    Office for National Statistics
                  </title>
                  <g
                    class="ons-svg-logo__group ons-svg-logo__group--secondary"
                    fill="#a8bd3a"
                  >
                    <path
                      d="M0,34.6c.8-1.69,1.39-3,2.32-4.6A38.28,38.28,0,0,1,0,23.4V34.6M5,3S0,3,0,9.25v1A62.12,62.12,0,0,0,4.2,27a43.77,43.77,0,0,1,9.42-10.79C21.69,9.21,31.16,5.13,45.9,3Z"
                    />
                  </g>
                  <g
                    class="ons-svg-logo__group ons-svg-logo__group--primary"
                    fill="#003c57"
                  >
                    <path
                      d="M53.06,6.42C36.2,8,24.68,12.92,16.43,20.07A41.46,41.46,0,0,0,6.4,32.2C12.87,44.93,28.88,57,46.6,57H47s6.32.21,6.32-6.91V6.36a1.22,1.22,0,0,1-.26.06M9.72,42.67a44.25,44.25,0,0,1-5-7.42A80.59,80.59,0,0,0,0,46.38V56.91L31.06,57c-9.83-3-15.74-7.64-21.34-14.3"
                    />
                  </g>
                  <g
                    class="ons-svg-logo__group ons-svg-logo__group--text"
                    fill="#003c57"
                  >
                    <path
                      d="M82,47.49c-9.07,0-13.13-7.51-13.13-16.77S72.91,14,82,14s13.1,7.61,13.1,16.77S91.1,47.54,82,47.54m0-30.91c-6.69,0-9.07,7.33-9.07,14.05s2.16,13.9,9.07,13.9,9-7.28,9-13.9-2.34-14-9-14"
                    />
                    <path
                      d="M106.36,23.81V46.88h-3.67V23.81H98.93V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.38,0,.86.05.86.05v2.35h-.43c-2.55,0-4.84,1.64-4.84,5.12v4.09h5.27v2.25Z"
                    />
                    <path
                      d="M121.53,23.81V46.88h-3.67V23.81H114.1V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.38,0,.86.05.86.05v2.35h-.43c-2.55,0-4.84,1.64-4.84,5.12v4.09h5.27v2.25Z"
                    />
                    <path
                      d="M132.85,16.72a2.28,2.28,0,0,1-2.33-2.23v0a2.34,2.34,0,0,1,4.67,0,2.28,2.28,0,0,1-2.3,2.26h0M131,21.56h3.71V46.88H131Z"
                    />
                    <path
                      d="M150.53,47.49c-6,0-10.63-5.16-10.63-13.29S144.52,21,150.66,21a9.76,9.76,0,0,1,6.17,1.74l-1,2.25a7.53,7.53,0,0,0-4.4-1.36c-5.15,0-7.78,4.46-7.78,10.48,0,6.2,3,10.62,7.65,10.62a8,8,0,0,0,4.49-1.37l1,2.45a10.21,10.21,0,0,1-6.3,1.73"
                    />
                    <path
                      d="M162.84,35.75c.48,6,3.76,9,8.9,9a14.66,14.66,0,0,0,6.88-1.55l1.08,2.59a18,18,0,0,1-8.22,1.73c-7.12,0-12.18-4.23-12.18-13.34,0-8.69,4.67-13.2,11-13.2s10.37,3.95,10.37,12.4Zm7.35-12.41c-4.1,0-7.56,3.2-7.52,10.29l14.39-2c0-5.87-2.81-8.32-6.87-8.32"
                    />
                    <path
                      d="M198.57,23.81V46.88H194.9V23.81h-3.76V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.39,0,.87.05.87.05v2.35h-.44c-2.54,0-4.84,1.64-4.84,5.12v4.09h5.28v2.25Z"
                    />
                    <path
                      d="M217.28,47.49c-7.47,0-10.89-5.78-10.89-13.24S209.81,21,217.28,21s10.85,5.82,10.85,13.3-3.37,13.24-10.85,13.24m0-24c-5.53,0-7.13,5.59-7.13,10.81s1.73,10.56,7.13,10.56,7.13-5.35,7.13-10.56-1.6-10.81-7.13-10.81"
                    />
                    <path
                      d="M244.08,23.91c-2.34-.61-5.75-.52-7.35.47v22.5H233V22.69c2.67-1.13,5.36-1.74,10.11-1.74H245Z"
                    />
                    <path
                      d="M277.42,47.13,263.07,25a32.2,32.2,0,0,1-1.85-3.29h-.09s.13,1.88.13,3.85V47.13h-4.71V14.8h5.31l13.61,20.82A28.76,28.76,0,0,1,277.38,39h.08s-.17-1.84-.17-3.77V14.8H282V47.13Z"
                    />
                    <path
                      d="M297.52,47.79c-7.43,0-10.93-3-10.93-7.81,0-6.8,7.12-8.64,15.59-9.39V29.13c0-3.47-2.37-4.51-5.83-4.51a18,18,0,0,0-6.87,1.46L288.23,23a24,24,0,0,1,9.12-1.83c5.61,0,9.93,2.3,9.93,8.78V46a22.71,22.71,0,0,1-9.76,1.83m4.66-14.67c-6.26.67-10.45,1.84-10.45,6.73,0,3.42,2.42,4.88,6.22,4.88a10.09,10.09,0,0,0,4.23-.84Z"
                    />
                    <path
                      d="M322,47.69c-5.31,0-7.34-3.43-7.34-6.86V25.09h-3.55V21.81h3.55V16.12l5.4-1.5v7.19H325v3.28h-5V40.55a3.26,3.26,0,0,0,3,3.52h.5a5.5,5.5,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                    />
                    <path
                      d="M331.91,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.44V47.13h-5.44Z"
                    />
                    <path
                      d="M350.88,47.79c-7.73,0-11.57-5.74-11.57-13.3s3.84-13.34,11.57-13.34,11.54,5.78,11.54,13.34-3.8,13.3-11.54,13.3m0-23.17c-4.66,0-6.05,4.89-6.05,9.82s1.47,9.63,6.05,9.63,6.05-4.7,6.05-9.63-1.38-9.82-6.05-9.82"
                    />
                    <path
                      d="M382.52,47.13V29c0-3.24-2.77-4.47-5.88-4.47a12.3,12.3,0,0,0-4.37.76v21.8h-5.39V23a26.81,26.81,0,0,1,10.06-1.83c6.61,0,11,2.25,11,7.8V47.13Z"
                    />
                    <path
                      d="M403.18,47.79c-7.43,0-10.94-3-10.94-7.81,0-6.8,7.13-8.64,15.6-9.39V29.13c0-3.47-2.37-4.51-5.83-4.51a18,18,0,0,0-6.87,1.46L393.89,23A24,24,0,0,1,403,21.15c5.62,0,9.94,2.3,9.94,8.78V46a22.71,22.71,0,0,1-9.76,1.83m4.66-14.67c-6.27.67-10.46,1.84-10.46,6.73,0,3.42,2.43,4.88,6.23,4.88a10.09,10.09,0,0,0,4.23-.84Z"
                    />
                    <polygon
                      points="418.52 47.13 418.52 34.91 418.52 10.25 423.92 10.25 423.92 22.76 423.92 47.13 418.52 47.13"
                    />
                    <path
                      d="M445.39,47.79A19.11,19.11,0,0,1,436.58,46l1.51-4a13.48,13.48,0,0,0,6.22,1.55c3.76,0,6.44-2.21,6.44-5.41,0-7.09-13.44-4.36-13.44-14.42,0-5.13,4.15-9.59,10.72-9.59A15.82,15.82,0,0,1,455.8,16l-1.38,3.52a11.93,11.93,0,0,0-5.66-1.5c-3.5,0-5.79,2.11-5.79,5.12,0,7,13.74,3.94,13.74,14.65,0,5.74-4.71,10-11.32,10"
                    />
                    <path
                      d="M470.41,47.69c-5.31,0-7.34-3.43-7.34-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.92v3.28h-4.92V40.55a3.27,3.27,0,0,0,3,3.52h.48a5.12,5.12,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                    />
                    <path
                      d="M487.27,47.79c-7.44,0-10.93-3-10.93-7.81,0-6.8,7.13-8.64,15.6-9.39V29.13c0-3.47-2.38-4.51-5.84-4.51a18,18,0,0,0-6.87,1.46L478,23a23.94,23.94,0,0,1,9.11-1.83c5.62,0,9.94,2.3,9.94,8.78V46a22.71,22.71,0,0,1-9.76,1.83M492,33.16c-6.27.67-10.46,1.84-10.46,6.73,0,3.42,2.42,4.88,6.22,4.88a10,10,0,0,0,4.24-.84Z"
                    />
                    <path
                      d="M511.73,47.69c-5.32,0-7.35-3.43-7.35-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.92v3.28h-4.92V40.55a3.26,3.26,0,0,0,3,3.52h.5a5.5,5.5,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                    />
                    <path
                      d="M521.66,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.45V47.13h-5.45Z"
                    />
                    <path
                      d="M536.19,47.79A15.9,15.9,0,0,1,528.54,46L530,42.48a10.53,10.53,0,0,0,5.52,1.5c2.77,0,5-1.78,5-3.94,0-6-11.1-3.2-11.1-11.47,0-3.76,3.37-7.42,8.86-7.42A13.56,13.56,0,0,1,545.34,23l-1.42,3.14a8.47,8.47,0,0,0-4.62-1.45c-2.81,0-4.54,1.69-4.54,3.62,0,5.64,11.32,3.14,11.32,11.6,0,4-3.85,7.9-9.89,7.9"
                    />
                    <path
                      d="M559.83,47.69c-5.31,0-7.35-3.43-7.35-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.93v3.28h-4.93V40.55a3.27,3.27,0,0,0,3,3.52h.48a5.64,5.64,0,0,0,1.47-.23v3.33a7.72,7.72,0,0,1-3,.52"
                    />
                    <path
                      d="M569.77,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.44V47.13h-5.44Z"
                    />
                    <path
                      d="M588.14,47.79c-6.23,0-11-5.08-11-13.35s4.88-13.29,11-13.29A10.51,10.51,0,0,1,594.66,23l-1.21,3a6.87,6.87,0,0,0-4-1.22c-4.4,0-6.69,3.81-6.69,9.49s2.63,9.59,6.61,9.59a6.74,6.74,0,0,0,4-1.28L594.7,46c-1.12.94-3.33,1.84-6.56,1.84"
                    />
                    <path
                      d="M605.1,47.79A15.9,15.9,0,0,1,597.45,46l1.42-3.47A10.54,10.54,0,0,0,604.4,44c2.77,0,5-1.78,5-3.94,0-6-11.1-3.2-11.1-11.47,0-3.76,3.37-7.42,8.85-7.42a13.49,13.49,0,0,1,7.1,1.83l-1.42,3.14a8.42,8.42,0,0,0-4.63-1.45c-2.8,0-4.53,1.69-4.53,3.62,0,5.64,11.32,3.14,11.32,11.6,0,4-3.85,7.9-9.89,7.9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`React homepage view questionnaire page matches Snapshot in production 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="ons-skip-link"
        href="#main-content"
      >
        Skip to content
      </a>
      <header
        class="ons-header ons-header--internal"
      >
        <div
          class="ons-header__top"
          role="banner"
        >
          <div
            class="ons-container"
          >
            <div
              class="ons-header__grid-top ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap "
            >
              <div
                class="ons-grid__col ons-col-auto"
              >
                <a
                  class="header__logo-link"
                  href="/"
                >
                  <picture>
                    <img
                      alt="Office for National Statistics logo"
                      class="ons-header__logo"
                      src="https://cdn.ons.gov.uk/sdc/design-system/31.4.0/img/ons-logo-neg-en.svg"
                    />
                  </picture>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ons-header__main"
        >
          <div
            class="ons-container"
          >
            <div
              class="ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap"
            >
              <div
                class="ons-grid__col ons-col-auto ons-u-flex-shrink"
              >
                <div
                  class="ons-header__title"
                >
                  Deploy Questionnaire Service
                </div>
              </div>
              <div
                class="ons-grid__col ons-col-auto ons-u-flex-no-shrink ons-u-d-no@xxs@m"
              >
                <button
                  class="ons-btn ons-btn--ghost ons-u-d-no@xxs@m ons-btn--exit"
                  data-test-id="signout-button"
                  id="signout-button"
                  type="button"
                >
                  <span
                    class="ons-btn__inner"
                  >
                    <span
                      class="ons-btn__text"
                    >
                      Sign out
                    </span>
                    <svg
                      class="ons-svg-icon ons-u-ml-xs"
                      focusable="false"
                      viewBox="0 0 12 12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.85,7.65l-2.5-2.5a.5.5,0,0,0-.71,0,.48.48,0,0,0-.15.36V7h-3a.5.5,0,0,0-.5.5v1a.5.5,0,0,0,.5.5h3v1.5A.49.49,0,0,0,11,11a.48.48,0,0,0,.34-.14l2.51-2.5a.49.49,0,0,0,0-.68Z"
                        transform="translate(-2 -2)"
                      />
                      <path
                        d="M8.5,14h-6a.5.5,0,0,1-.5-.5V2.5A.5.5,0,0,1,2.5,2h6a.5.5,0,0,1,.5.5V3a.5.5,0,0,1-.5.5h-5v9h5A.5.5,0,0,1,9,13v.5A.5.5,0,0,1,8.5,14Z"
                        transform="translate(-2 -2)"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ons-navigation-wrapper"
        >
          <div
            class="ons-container ons-container--gutterless@xxs@l"
          >
            <nav
              aria-label="Main menu"
              class="ons-navigation ons-navigation--main ons-js-navigation"
              data-analytics="header-navigation"
              id="main-nav"
              role="navigation"
            >
              <ul
                class="ons-navigation__list"
              >
                <li
                  class="ons-navigation__item  ons-navigation__item--active"
                >
                  <a
                    class="ons-navigation__link"
                    href="/"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="ons-navigation__item  "
                >
                  <a
                    class="ons-navigation__link"
                    href="/upload"
                  >
                    Deploy a questionnaire
                  </a>
                </li>
                <li
                  class="ons-navigation__item  "
                >
                  <a
                    class="ons-navigation__link"
                    href="/audit"
                  >
                    View deployment history
                  </a>
                </li>
                <li
                  class="ons-navigation__item  "
                >
                  <a
                    class="ons-navigation__link"
                    href="/status"
                  >
                    Check Blaise status
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </header>
      <div
        class="ons-page__container ons-container"
        style="min-height: calc(67vh);"
      >
        <main
          class="ons-page__main ons-u-mt-no"
          id="main-content"
        >
          <div
            class="elementToFadeIn ons-u-pt-s"
          >
            <div
              class="ons-field"
            >
              <label
                class="ons-label"
                for="filter-by-name"
              >
                Filter by questionnaire name
              </label>
              <input
                class="ons-input ons-input--text ons-input-type__input"
                id="filter-by-name"
                type="text"
              />
            </div>
            <div
              class="ons-u-mt-s"
            >
              <h3
                aria-live="polite"
              >
                3
                 results of 
                3
              </h3>
              <table
                class="ons-table"
                id="questionnaire-table"
              >
                <thead
                  class="ons-table__head"
                >
                  <tr
                    class="ons-table__row"
                  >
                    <th
                      class="ons-table__header"
                      scope="col"
                    >
                      Questionnaire
                    </th>
                    <th
                      class="ons-table__header"
                      scope="col"
                    >
                      Field period
                    </th>
                    <th
                      class="ons-table__header"
                      scope="col"
                    >
                      Status
                    </th>
                    <th
                      class="ons-table__header"
                      scope="col"
                    >
                      Install date
                    </th>
                    <th
                      class="ons-table__header"
                      scope="col"
                    >
                      Cases
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ons-table__body"
                >
                  <tr
                    class="ons-table__row"
                    data-testid="questionnaire-table-row"
                  >
                    <td
                      class="ons-table__cell "
                    >
                      <a
                        aria-label="View more information for questionnaire OPN2101A"
                        data-testid="info-OPN2101A"
                        href="/questionnaire/OPN2101A"
                        id="info-OPN2101A"
                      >
                        OPN2101A
                      </a>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      January 2021
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      <span
                        class="ons-status ons-status--success"
                      >
                        Active
                      </span>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      15/01/2021 14:41
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      0
                    </td>
                  </tr>
                  <tr
                    class="ons-table__row"
                    data-testid="questionnaire-table-row"
                  >
                    <td
                      class="ons-table__cell "
                    >
                      <a
                        aria-label="View more information for questionnaire OPN2007T"
                        data-testid="info-OPN2007T"
                        href="/questionnaire/OPN2007T"
                        id="info-OPN2007T"
                      >
                        OPN2007T
                      </a>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      July 2020
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      <span
                        class="ons-status ons-status--success"
                      >
                        Active
                      </span>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      15/01/2021 15:18
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      10
                    </td>
                  </tr>
                  <tr
                    class="ons-table__row"
                    data-testid="questionnaire-table-row"
                  >
                    <td
                      class="ons-table__cell "
                    >
                      <a
                        aria-label="View more information for questionnaire OPN2004A"
                        data-testid="info-OPN2004A"
                        href="/questionnaire/OPN2004A"
                        id="info-OPN2004A"
                      >
                        OPN2004A
                      </a>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      April 2020
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      <span
                        class="ons-status ons-status--error"
                      >
                        Failed
                      </span>
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      15/01/2021 15:26
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      0
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </main>
      </div>
      <footer
        class="ons-footer"
      >
        <div
          class="ons-footer__body"
          data-analytics="footer"
        >
          <div
            class="ons-container"
          >
            <div
              class="ons-grid"
            />
            <div
              class="ons-grid ons-grid--flex ons-grid--vertical-top ons-grid--between"
            >
              <div
                class="ons-grid__col"
              >
                <div
                  class="ons-footer__poweredby ons-u-mb-m"
                >
                  <svg
                    aria-labelledby="ons-logo-en-footer-alt"
                    class="ons-svg-logo"
                    height="19"
                    viewBox="33 2 552 60"
                    width="197"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="ons-logo-en-footer-alt"
                    >
                      Office for National Statistics
                    </title>
                    <g
                      class="ons-svg-logo__group ons-svg-logo__group--secondary"
                      fill="#a8bd3a"
                    >
                      <path
                        d="M0,34.6c.8-1.69,1.39-3,2.32-4.6A38.28,38.28,0,0,1,0,23.4V34.6M5,3S0,3,0,9.25v1A62.12,62.12,0,0,0,4.2,27a43.77,43.77,0,0,1,9.42-10.79C21.69,9.21,31.16,5.13,45.9,3Z"
                      />
                    </g>
                    <g
                      class="ons-svg-logo__group ons-svg-logo__group--primary"
                      fill="#003c57"
                    >
                      <path
                        d="M53.06,6.42C36.2,8,24.68,12.92,16.43,20.07A41.46,41.46,0,0,0,6.4,32.2C12.87,44.93,28.88,57,46.6,57H47s6.32.21,6.32-6.91V6.36a1.22,1.22,0,0,1-.26.06M9.72,42.67a44.25,44.25,0,0,1-5-7.42A80.59,80.59,0,0,0,0,46.38V56.91L31.06,57c-9.83-3-15.74-7.64-21.34-14.3"
                      />
                    </g>
                    <g
                      class="ons-svg-logo__group ons-svg-logo__group--text"
                      fill="#003c57"
                    >
                      <path
                        d="M82,47.49c-9.07,0-13.13-7.51-13.13-16.77S72.91,14,82,14s13.1,7.61,13.1,16.77S91.1,47.54,82,47.54m0-30.91c-6.69,0-9.07,7.33-9.07,14.05s2.16,13.9,9.07,13.9,9-7.28,9-13.9-2.34-14-9-14"
                      />
                      <path
                        d="M106.36,23.81V46.88h-3.67V23.81H98.93V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.38,0,.86.05.86.05v2.35h-.43c-2.55,0-4.84,1.64-4.84,5.12v4.09h5.27v2.25Z"
                      />
                      <path
                        d="M121.53,23.81V46.88h-3.67V23.81H114.1V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.38,0,.86.05.86.05v2.35h-.43c-2.55,0-4.84,1.64-4.84,5.12v4.09h5.27v2.25Z"
                      />
                      <path
                        d="M132.85,16.72a2.28,2.28,0,0,1-2.33-2.23v0a2.34,2.34,0,0,1,4.67,0,2.28,2.28,0,0,1-2.3,2.26h0M131,21.56h3.71V46.88H131Z"
                      />
                      <path
                        d="M150.53,47.49c-6,0-10.63-5.16-10.63-13.29S144.52,21,150.66,21a9.76,9.76,0,0,1,6.17,1.74l-1,2.25a7.53,7.53,0,0,0-4.4-1.36c-5.15,0-7.78,4.46-7.78,10.48,0,6.2,3,10.62,7.65,10.62a8,8,0,0,0,4.49-1.37l1,2.45a10.21,10.21,0,0,1-6.3,1.73"
                      />
                      <path
                        d="M162.84,35.75c.48,6,3.76,9,8.9,9a14.66,14.66,0,0,0,6.88-1.55l1.08,2.59a18,18,0,0,1-8.22,1.73c-7.12,0-12.18-4.23-12.18-13.34,0-8.69,4.67-13.2,11-13.2s10.37,3.95,10.37,12.4Zm7.35-12.41c-4.1,0-7.56,3.2-7.52,10.29l14.39-2c0-5.87-2.81-8.32-6.87-8.32"
                      />
                      <path
                        d="M198.57,23.81V46.88H194.9V23.81h-3.76V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.39,0,.87.05.87.05v2.35h-.44c-2.54,0-4.84,1.64-4.84,5.12v4.09h5.28v2.25Z"
                      />
                      <path
                        d="M217.28,47.49c-7.47,0-10.89-5.78-10.89-13.24S209.81,21,217.28,21s10.85,5.82,10.85,13.3-3.37,13.24-10.85,13.24m0-24c-5.53,0-7.13,5.59-7.13,10.81s1.73,10.56,7.13,10.56,7.13-5.35,7.13-10.56-1.6-10.81-7.13-10.81"
                      />
                      <path
                        d="M244.08,23.91c-2.34-.61-5.75-.52-7.35.47v22.5H233V22.69c2.67-1.13,5.36-1.74,10.11-1.74H245Z"
                      />
                      <path
                        d="M277.42,47.13,263.07,25a32.2,32.2,0,0,1-1.85-3.29h-.09s.13,1.88.13,3.85V47.13h-4.71V14.8h5.31l13.61,20.82A28.76,28.76,0,0,1,277.38,39h.08s-.17-1.84-.17-3.77V14.8H282V47.13Z"
                      />
                      <path
                        d="M297.52,47.79c-7.43,0-10.93-3-10.93-7.81,0-6.8,7.12-8.64,15.59-9.39V29.13c0-3.47-2.37-4.51-5.83-4.51a18,18,0,0,0-6.87,1.46L288.23,23a24,24,0,0,1,9.12-1.83c5.61,0,9.93,2.3,9.93,8.78V46a22.71,22.71,0,0,1-9.76,1.83m4.66-14.67c-6.26.67-10.45,1.84-10.45,6.73,0,3.42,2.42,4.88,6.22,4.88a10.09,10.09,0,0,0,4.23-.84Z"
                      />
                      <path
                        d="M322,47.69c-5.31,0-7.34-3.43-7.34-6.86V25.09h-3.55V21.81h3.55V16.12l5.4-1.5v7.19H325v3.28h-5V40.55a3.26,3.26,0,0,0,3,3.52h.5a5.5,5.5,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                      />
                      <path
                        d="M331.91,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.44V47.13h-5.44Z"
                      />
                      <path
                        d="M350.88,47.79c-7.73,0-11.57-5.74-11.57-13.3s3.84-13.34,11.57-13.34,11.54,5.78,11.54,13.34-3.8,13.3-11.54,13.3m0-23.17c-4.66,0-6.05,4.89-6.05,9.82s1.47,9.63,6.05,9.63,6.05-4.7,6.05-9.63-1.38-9.82-6.05-9.82"
                      />
                      <path
                        d="M382.52,47.13V29c0-3.24-2.77-4.47-5.88-4.47a12.3,12.3,0,0,0-4.37.76v21.8h-5.39V23a26.81,26.81,0,0,1,10.06-1.83c6.61,0,11,2.25,11,7.8V47.13Z"
                      />
                      <path
                        d="M403.18,47.79c-7.43,0-10.94-3-10.94-7.81,0-6.8,7.13-8.64,15.6-9.39V29.13c0-3.47-2.37-4.51-5.83-4.51a18,18,0,0,0-6.87,1.46L393.89,23A24,24,0,0,1,403,21.15c5.62,0,9.94,2.3,9.94,8.78V46a22.71,22.71,0,0,1-9.76,1.83m4.66-14.67c-6.27.67-10.46,1.84-10.46,6.73,0,3.42,2.43,4.88,6.23,4.88a10.09,10.09,0,0,0,4.23-.84Z"
                      />
                      <polygon
                        points="418.52 47.13 418.52 34.91 418.52 10.25 423.92 10.25 423.92 22.76 423.92 47.13 418.52 47.13"
                      />
                      <path
                        d="M445.39,47.79A19.11,19.11,0,0,1,436.58,46l1.51-4a13.48,13.48,0,0,0,6.22,1.55c3.76,0,6.44-2.21,6.44-5.41,0-7.09-13.44-4.36-13.44-14.42,0-5.13,4.15-9.59,10.72-9.59A15.82,15.82,0,0,1,455.8,16l-1.38,3.52a11.93,11.93,0,0,0-5.66-1.5c-3.5,0-5.79,2.11-5.79,5.12,0,7,13.74,3.94,13.74,14.65,0,5.74-4.71,10-11.32,10"
                      />
                      <path
                        d="M470.41,47.69c-5.31,0-7.34-3.43-7.34-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.92v3.28h-4.92V40.55a3.27,3.27,0,0,0,3,3.52h.48a5.12,5.12,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                      />
                      <path
                        d="M487.27,47.79c-7.44,0-10.93-3-10.93-7.81,0-6.8,7.13-8.64,15.6-9.39V29.13c0-3.47-2.38-4.51-5.84-4.51a18,18,0,0,0-6.87,1.46L478,23a23.94,23.94,0,0,1,9.11-1.83c5.62,0,9.94,2.3,9.94,8.78V46a22.71,22.71,0,0,1-9.76,1.83M492,33.16c-6.27.67-10.46,1.84-10.46,6.73,0,3.42,2.42,4.88,6.22,4.88a10,10,0,0,0,4.24-.84Z"
                      />
                      <path
                        d="M511.73,47.69c-5.32,0-7.35-3.43-7.35-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.92v3.28h-4.92V40.55a3.26,3.26,0,0,0,3,3.52h.5a5.5,5.5,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                      />
                      <path
                        d="M521.66,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.45V47.13h-5.45Z"
                      />
                      <path
                        d="M536.19,47.79A15.9,15.9,0,0,1,528.54,46L530,42.48a10.53,10.53,0,0,0,5.52,1.5c2.77,0,5-1.78,5-3.94,0-6-11.1-3.2-11.1-11.47,0-3.76,3.37-7.42,8.86-7.42A13.56,13.56,0,0,1,545.34,23l-1.42,3.14a8.47,8.47,0,0,0-4.62-1.45c-2.81,0-4.54,1.69-4.54,3.62,0,5.64,11.32,3.14,11.32,11.6,0,4-3.85,7.9-9.89,7.9"
                      />
                      <path
                        d="M559.83,47.69c-5.31,0-7.35-3.43-7.35-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.93v3.28h-4.93V40.55a3.27,3.27,0,0,0,3,3.52h.48a5.64,5.64,0,0,0,1.47-.23v3.33a7.72,7.72,0,0,1-3,.52"
                      />
                      <path
                        d="M569.77,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.44V47.13h-5.44Z"
                      />
                      <path
                        d="M588.14,47.79c-6.23,0-11-5.08-11-13.35s4.88-13.29,11-13.29A10.51,10.51,0,0,1,594.66,23l-1.21,3a6.87,6.87,0,0,0-4-1.22c-4.4,0-6.69,3.81-6.69,9.49s2.63,9.59,6.61,9.59a6.74,6.74,0,0,0,4-1.28L594.7,46c-1.12.94-3.33,1.84-6.56,1.84"
                      />
                      <path
                        d="M605.1,47.79A15.9,15.9,0,0,1,597.45,46l1.42-3.47A10.54,10.54,0,0,0,604.4,44c2.77,0,5-1.78,5-3.94,0-6-11.1-3.2-11.1-11.47,0-3.76,3.37-7.42,8.85-7.42a13.49,13.49,0,0,1,7.1,1.83l-1.42,3.14a8.42,8.42,0,0,0-4.63-1.45c-2.8,0-4.53,1.69-4.53,3.62,0,5.64,11.32,3.14,11.32,11.6,0,4-3.85,7.9-9.89,7.9"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <a
      class="ons-skip-link"
      href="#main-content"
    >
      Skip to content
    </a>
    <header
      class="ons-header ons-header--internal"
    >
      <div
        class="ons-header__top"
        role="banner"
      >
        <div
          class="ons-container"
        >
          <div
            class="ons-header__grid-top ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap "
          >
            <div
              class="ons-grid__col ons-col-auto"
            >
              <a
                class="header__logo-link"
                href="/"
              >
                <picture>
                  <img
                    alt="Office for National Statistics logo"
                    class="ons-header__logo"
                    src="https://cdn.ons.gov.uk/sdc/design-system/31.4.0/img/ons-logo-neg-en.svg"
                  />
                </picture>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ons-header__main"
      >
        <div
          class="ons-container"
        >
          <div
            class="ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap"
          >
            <div
              class="ons-grid__col ons-col-auto ons-u-flex-shrink"
            >
              <div
                class="ons-header__title"
              >
                Deploy Questionnaire Service
              </div>
            </div>
            <div
              class="ons-grid__col ons-col-auto ons-u-flex-no-shrink ons-u-d-no@xxs@m"
            >
              <button
                class="ons-btn ons-btn--ghost ons-u-d-no@xxs@m ons-btn--exit"
                data-test-id="signout-button"
                id="signout-button"
                type="button"
              >
                <span
                  class="ons-btn__inner"
                >
                  <span
                    class="ons-btn__text"
                  >
                    Sign out
                  </span>
                  <svg
                    class="ons-svg-icon ons-u-ml-xs"
                    focusable="false"
                    viewBox="0 0 12 12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.85,7.65l-2.5-2.5a.5.5,0,0,0-.71,0,.48.48,0,0,0-.15.36V7h-3a.5.5,0,0,0-.5.5v1a.5.5,0,0,0,.5.5h3v1.5A.49.49,0,0,0,11,11a.48.48,0,0,0,.34-.14l2.51-2.5a.49.49,0,0,0,0-.68Z"
                      transform="translate(-2 -2)"
                    />
                    <path
                      d="M8.5,14h-6a.5.5,0,0,1-.5-.5V2.5A.5.5,0,0,1,2.5,2h6a.5.5,0,0,1,.5.5V3a.5.5,0,0,1-.5.5h-5v9h5A.5.5,0,0,1,9,13v.5A.5.5,0,0,1,8.5,14Z"
                      transform="translate(-2 -2)"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ons-navigation-wrapper"
      >
        <div
          class="ons-container ons-container--gutterless@xxs@l"
        >
          <nav
            aria-label="Main menu"
            class="ons-navigation ons-navigation--main ons-js-navigation"
            data-analytics="header-navigation"
            id="main-nav"
            role="navigation"
          >
            <ul
              class="ons-navigation__list"
            >
              <li
                class="ons-navigation__item  ons-navigation__item--active"
              >
                <a
                  class="ons-navigation__link"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                class="ons-navigation__item  "
              >
                <a
                  class="ons-navigation__link"
                  href="/upload"
                >
                  Deploy a questionnaire
                </a>
              </li>
              <li
                class="ons-navigation__item  "
              >
                <a
                  class="ons-navigation__link"
                  href="/audit"
                >
                  View deployment history
                </a>
              </li>
              <li
                class="ons-navigation__item  "
              >
                <a
                  class="ons-navigation__link"
                  href="/status"
                >
                  Check Blaise status
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <div
      class="ons-page__container ons-container"
      style="min-height: calc(67vh);"
    >
      <main
        class="ons-page__main ons-u-mt-no"
        id="main-content"
      >
        <div
          class="elementToFadeIn ons-u-pt-s"
        >
          <div
            class="ons-field"
          >
            <label
              class="ons-label"
              for="filter-by-name"
            >
              Filter by questionnaire name
            </label>
            <input
              class="ons-input ons-input--text ons-input-type__input"
              id="filter-by-name"
              type="text"
            />
          </div>
          <div
            class="ons-u-mt-s"
          >
            <h3
              aria-live="polite"
            >
              3
               results of 
              3
            </h3>
            <table
              class="ons-table"
              id="questionnaire-table"
            >
              <thead
                class="ons-table__head"
              >
                <tr
                  class="ons-table__row"
                >
                  <th
                    class="ons-table__header"
                    scope="col"
                  >
                    Questionnaire
                  </th>
                  <th
                    class="ons-table__header"
                    scope="col"
                  >
                    Field period
                  </th>
                  <th
                    class="ons-table__header"
                    scope="col"
                  >
                    Status
                  </th>
                  <th
                    class="ons-table__header"
                    scope="col"
                  >
                    Install date
                  </th>
                  <th
                    class="ons-table__header"
                    scope="col"
                  >
                    Cases
                  </th>
                </tr>
              </thead>
              <tbody
                class="ons-table__body"
              >
                <tr
                  class="ons-table__row"
                  data-testid="questionnaire-table-row"
                >
                  <td
                    class="ons-table__cell "
                  >
                    <a
                      aria-label="View more information for questionnaire OPN2101A"
                      data-testid="info-OPN2101A"
                      href="/questionnaire/OPN2101A"
                      id="info-OPN2101A"
                    >
                      OPN2101A
                    </a>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    January 2021
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    <span
                      class="ons-status ons-status--success"
                    >
                      Active
                    </span>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    15/01/2021 14:41
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    0
                  </td>
                </tr>
                <tr
                  class="ons-table__row"
                  data-testid="questionnaire-table-row"
                >
                  <td
                    class="ons-table__cell "
                  >
                    <a
                      aria-label="View more information for questionnaire OPN2007T"
                      data-testid="info-OPN2007T"
                      href="/questionnaire/OPN2007T"
                      id="info-OPN2007T"
                    >
                      OPN2007T
                    </a>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    July 2020
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    <span
                      class="ons-status ons-status--success"
                    >
                      Active
                    </span>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    15/01/2021 15:18
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    10
                  </td>
                </tr>
                <tr
                  class="ons-table__row"
                  data-testid="questionnaire-table-row"
                >
                  <td
                    class="ons-table__cell "
                  >
                    <a
                      aria-label="View more information for questionnaire OPN2004A"
                      data-testid="info-OPN2004A"
                      href="/questionnaire/OPN2004A"
                      id="info-OPN2004A"
                    >
                      OPN2004A
                    </a>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    April 2020
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    <span
                      class="ons-status ons-status--error"
                    >
                      Failed
                    </span>
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    15/01/2021 15:26
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </main>
    </div>
    <footer
      class="ons-footer"
    >
      <div
        class="ons-footer__body"
        data-analytics="footer"
      >
        <div
          class="ons-container"
        >
          <div
            class="ons-grid"
          />
          <div
            class="ons-grid ons-grid--flex ons-grid--vertical-top ons-grid--between"
          >
            <div
              class="ons-grid__col"
            >
              <div
                class="ons-footer__poweredby ons-u-mb-m"
              >
                <svg
                  aria-labelledby="ons-logo-en-footer-alt"
                  class="ons-svg-logo"
                  height="19"
                  viewBox="33 2 552 60"
                  width="197"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="ons-logo-en-footer-alt"
                  >
                    Office for National Statistics
                  </title>
                  <g
                    class="ons-svg-logo__group ons-svg-logo__group--secondary"
                    fill="#a8bd3a"
                  >
                    <path
                      d="M0,34.6c.8-1.69,1.39-3,2.32-4.6A38.28,38.28,0,0,1,0,23.4V34.6M5,3S0,3,0,9.25v1A62.12,62.12,0,0,0,4.2,27a43.77,43.77,0,0,1,9.42-10.79C21.69,9.21,31.16,5.13,45.9,3Z"
                    />
                  </g>
                  <g
                    class="ons-svg-logo__group ons-svg-logo__group--primary"
                    fill="#003c57"
                  >
                    <path
                      d="M53.06,6.42C36.2,8,24.68,12.92,16.43,20.07A41.46,41.46,0,0,0,6.4,32.2C12.87,44.93,28.88,57,46.6,57H47s6.32.21,6.32-6.91V6.36a1.22,1.22,0,0,1-.26.06M9.72,42.67a44.25,44.25,0,0,1-5-7.42A80.59,80.59,0,0,0,0,46.38V56.91L31.06,57c-9.83-3-15.74-7.64-21.34-14.3"
                    />
                  </g>
                  <g
                    class="ons-svg-logo__group ons-svg-logo__group--text"
                    fill="#003c57"
                  >
                    <path
                      d="M82,47.49c-9.07,0-13.13-7.51-13.13-16.77S72.91,14,82,14s13.1,7.61,13.1,16.77S91.1,47.54,82,47.54m0-30.91c-6.69,0-9.07,7.33-9.07,14.05s2.16,13.9,9.07,13.9,9-7.28,9-13.9-2.34-14-9-14"
                    />
                    <path
                      d="M106.36,23.81V46.88h-3.67V23.81H98.93V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.38,0,.86.05.86.05v2.35h-.43c-2.55,0-4.84,1.64-4.84,5.12v4.09h5.27v2.25Z"
                    />
                    <path
                      d="M121.53,23.81V46.88h-3.67V23.81H114.1V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.38,0,.86.05.86.05v2.35h-.43c-2.55,0-4.84,1.64-4.84,5.12v4.09h5.27v2.25Z"
                    />
                    <path
                      d="M132.85,16.72a2.28,2.28,0,0,1-2.33-2.23v0a2.34,2.34,0,0,1,4.67,0,2.28,2.28,0,0,1-2.3,2.26h0M131,21.56h3.71V46.88H131Z"
                    />
                    <path
                      d="M150.53,47.49c-6,0-10.63-5.16-10.63-13.29S144.52,21,150.66,21a9.76,9.76,0,0,1,6.17,1.74l-1,2.25a7.53,7.53,0,0,0-4.4-1.36c-5.15,0-7.78,4.46-7.78,10.48,0,6.2,3,10.62,7.65,10.62a8,8,0,0,0,4.49-1.37l1,2.45a10.21,10.21,0,0,1-6.3,1.73"
                    />
                    <path
                      d="M162.84,35.75c.48,6,3.76,9,8.9,9a14.66,14.66,0,0,0,6.88-1.55l1.08,2.59a18,18,0,0,1-8.22,1.73c-7.12,0-12.18-4.23-12.18-13.34,0-8.69,4.67-13.2,11-13.2s10.37,3.95,10.37,12.4Zm7.35-12.41c-4.1,0-7.56,3.2-7.52,10.29l14.39-2c0-5.87-2.81-8.32-6.87-8.32"
                    />
                    <path
                      d="M198.57,23.81V46.88H194.9V23.81h-3.76V21.56h3.76V17.9c0-4.61,2.72-7.95,8.08-7.95.39,0,.87.05.87.05v2.35h-.44c-2.54,0-4.84,1.64-4.84,5.12v4.09h5.28v2.25Z"
                    />
                    <path
                      d="M217.28,47.49c-7.47,0-10.89-5.78-10.89-13.24S209.81,21,217.28,21s10.85,5.82,10.85,13.3-3.37,13.24-10.85,13.24m0-24c-5.53,0-7.13,5.59-7.13,10.81s1.73,10.56,7.13,10.56,7.13-5.35,7.13-10.56-1.6-10.81-7.13-10.81"
                    />
                    <path
                      d="M244.08,23.91c-2.34-.61-5.75-.52-7.35.47v22.5H233V22.69c2.67-1.13,5.36-1.74,10.11-1.74H245Z"
                    />
                    <path
                      d="M277.42,47.13,263.07,25a32.2,32.2,0,0,1-1.85-3.29h-.09s.13,1.88.13,3.85V47.13h-4.71V14.8h5.31l13.61,20.82A28.76,28.76,0,0,1,277.38,39h.08s-.17-1.84-.17-3.77V14.8H282V47.13Z"
                    />
                    <path
                      d="M297.52,47.79c-7.43,0-10.93-3-10.93-7.81,0-6.8,7.12-8.64,15.59-9.39V29.13c0-3.47-2.37-4.51-5.83-4.51a18,18,0,0,0-6.87,1.46L288.23,23a24,24,0,0,1,9.12-1.83c5.61,0,9.93,2.3,9.93,8.78V46a22.71,22.71,0,0,1-9.76,1.83m4.66-14.67c-6.26.67-10.45,1.84-10.45,6.73,0,3.42,2.42,4.88,6.22,4.88a10.09,10.09,0,0,0,4.23-.84Z"
                    />
                    <path
                      d="M322,47.69c-5.31,0-7.34-3.43-7.34-6.86V25.09h-3.55V21.81h3.55V16.12l5.4-1.5v7.19H325v3.28h-5V40.55a3.26,3.26,0,0,0,3,3.52h.5a5.5,5.5,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                    />
                    <path
                      d="M331.91,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.44V47.13h-5.44Z"
                    />
                    <path
                      d="M350.88,47.79c-7.73,0-11.57-5.74-11.57-13.3s3.84-13.34,11.57-13.34,11.54,5.78,11.54,13.34-3.8,13.3-11.54,13.3m0-23.17c-4.66,0-6.05,4.89-6.05,9.82s1.47,9.63,6.05,9.63,6.05-4.7,6.05-9.63-1.38-9.82-6.05-9.82"
                    />
                    <path
                      d="M382.52,47.13V29c0-3.24-2.77-4.47-5.88-4.47a12.3,12.3,0,0,0-4.37.76v21.8h-5.39V23a26.81,26.81,0,0,1,10.06-1.83c6.61,0,11,2.25,11,7.8V47.13Z"
                    />
                    <path
                      d="M403.18,47.79c-7.43,0-10.94-3-10.94-7.81,0-6.8,7.13-8.64,15.6-9.39V29.13c0-3.47-2.37-4.51-5.83-4.51a18,18,0,0,0-6.87,1.46L393.89,23A24,24,0,0,1,403,21.15c5.62,0,9.94,2.3,9.94,8.78V46a22.71,22.71,0,0,1-9.76,1.83m4.66-14.67c-6.27.67-10.46,1.84-10.46,6.73,0,3.42,2.43,4.88,6.23,4.88a10.09,10.09,0,0,0,4.23-.84Z"
                    />
                    <polygon
                      points="418.52 47.13 418.52 34.91 418.52 10.25 423.92 10.25 423.92 22.76 423.92 47.13 418.52 47.13"
                    />
                    <path
                      d="M445.39,47.79A19.11,19.11,0,0,1,436.58,46l1.51-4a13.48,13.48,0,0,0,6.22,1.55c3.76,0,6.44-2.21,6.44-5.41,0-7.09-13.44-4.36-13.44-14.42,0-5.13,4.15-9.59,10.72-9.59A15.82,15.82,0,0,1,455.8,16l-1.38,3.52a11.93,11.93,0,0,0-5.66-1.5c-3.5,0-5.79,2.11-5.79,5.12,0,7,13.74,3.94,13.74,14.65,0,5.74-4.71,10-11.32,10"
                    />
                    <path
                      d="M470.41,47.69c-5.31,0-7.34-3.43-7.34-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.92v3.28h-4.92V40.55a3.27,3.27,0,0,0,3,3.52h.48a5.12,5.12,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                    />
                    <path
                      d="M487.27,47.79c-7.44,0-10.93-3-10.93-7.81,0-6.8,7.13-8.64,15.6-9.39V29.13c0-3.47-2.38-4.51-5.84-4.51a18,18,0,0,0-6.87,1.46L478,23a23.94,23.94,0,0,1,9.11-1.83c5.62,0,9.94,2.3,9.94,8.78V46a22.71,22.71,0,0,1-9.76,1.83M492,33.16c-6.27.67-10.46,1.84-10.46,6.73,0,3.42,2.42,4.88,6.22,4.88a10,10,0,0,0,4.24-.84Z"
                    />
                    <path
                      d="M511.73,47.69c-5.32,0-7.35-3.43-7.35-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.92v3.28h-4.92V40.55a3.26,3.26,0,0,0,3,3.52h.5a5.5,5.5,0,0,0,1.46-.23v3.33a7.69,7.69,0,0,1-3,.52"
                    />
                    <path
                      d="M521.66,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.45V47.13h-5.45Z"
                    />
                    <path
                      d="M536.19,47.79A15.9,15.9,0,0,1,528.54,46L530,42.48a10.53,10.53,0,0,0,5.52,1.5c2.77,0,5-1.78,5-3.94,0-6-11.1-3.2-11.1-11.47,0-3.76,3.37-7.42,8.86-7.42A13.56,13.56,0,0,1,545.34,23l-1.42,3.14a8.47,8.47,0,0,0-4.62-1.45c-2.81,0-4.54,1.69-4.54,3.62,0,5.64,11.32,3.14,11.32,11.6,0,4-3.85,7.9-9.89,7.9"
                    />
                    <path
                      d="M559.83,47.69c-5.31,0-7.35-3.43-7.35-6.86V25.09h-3.54V21.81h3.54V16.12l5.4-1.5v7.19h4.93v3.28h-4.93V40.55a3.27,3.27,0,0,0,3,3.52h.48a5.64,5.64,0,0,0,1.47-.23v3.33a7.72,7.72,0,0,1-3,.52"
                    />
                    <path
                      d="M569.77,17.43a3,3,0,0,1-3.15-2.81,3.17,3.17,0,0,1,6.31,0,3,3,0,0,1-3.16,2.81m-2.72,4.38h5.44V47.13h-5.44Z"
                    />
                    <path
                      d="M588.14,47.79c-6.23,0-11-5.08-11-13.35s4.88-13.29,11-13.29A10.51,10.51,0,0,1,594.66,23l-1.21,3a6.87,6.87,0,0,0-4-1.22c-4.4,0-6.69,3.81-6.69,9.49s2.63,9.59,6.61,9.59a6.74,6.74,0,0,0,4-1.28L594.7,46c-1.12.94-3.33,1.84-6.56,1.84"
                    />
                    <path
                      d="M605.1,47.79A15.9,15.9,0,0,1,597.45,46l1.42-3.47A10.54,10.54,0,0,0,604.4,44c2.77,0,5-1.78,5-3.94,0-6-11.1-3.2-11.1-11.47,0-3.76,3.37-7.42,8.85-7.42a13.49,13.49,0,0,1,7.1,1.83l-1.42,3.14a8.42,8.42,0,0,0-4.63-1.45c-2.8,0-4.53,1.69-4.53,3.62,0,5.64,11.32,3.14,11.32,11.6,0,4-3.85,7.9-9.89,7.9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
